--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -99,7 +99,7 @@
                     <label class="weui-label">开户支行<span class="required">*</span></label>
                 </div>
                 <div class="weui-cell__bd">
-                    <input class="weui-input" type="text" name="account_bank_branch_nm" placeholder="请选择开户支行" id="account-bank-branch-select2">
+                    <input class="weui-input" type="text" required="" name="account_bank_branch_nm" placeholder="请选择开户支行" id="account-bank-branch-select2">
                     <input type="hidden" required="" name="account_bank_branch_cd">
                 </div>
             </div>
