--- a/m/my/setting.html
+++ b/m/my/setting.html
@@ -26,9 +26,13 @@
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script type="text/javascript">
     function logout() {
-        $$.request('/action/user/logout', {}, function(data) {
-             window.location.href = '../login.html';
-        });
+        $$.request('/action/user/logout', {}, {
+			success: function(data) {
+				if (data.errcode == 0) {
+					window.location.href = '../login.html';
+				}
+			}
+		});					  
     }
     </script>
 </body>
