--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -203,7 +203,9 @@
 		var check = true;
 		$('#form').find('.weui-uploader.required').each(function(index, item){
 			var target = $(this);
-			if(target.find('.weui-uploader__file').length == 0) {
+			if(target.find('.weui-uploader__file').length == 0 ||
+				target.find('.weui-uploader__file').attr('data-type') == undefined ||
+				target.find('.weui-uploader__file').attr('data-type') == null) {
 				if(!(target.closest('.weui-cell').hasClass('hide'))) {
 					check = false;
 					return check;
@@ -255,8 +257,6 @@
     }
 
 	function LoadForm() {
-		var itemTpl = '<li class="weui-uploader__file" data-id="{{id}}"><div class="weui-uploader__file-content"></div></li>';
-		//var _id=0, id=0;
 		if(query.mchnt_id && query.mchnt_id != "" &&
 		  	query.mchnt_param_id && query.mchnt_param_id != "") {
 			weui.page.show('#page1');
@@ -270,16 +270,6 @@
 							var target = $('#form').find('.weui-uploader[data-type='+item.elec_info_type+']')[0];
 							var url =  $$.wrapUrl('/action/uploads/') + item.serverid;
 							weui.uploader(target).appendFile(url);
-							/*
-							id = ++_id;
-							var url =  $$.wrapUrl('/action/uploads/') + item.serverid;
-							var $file = $($.render(itemTpl, {
-								id: id
-							}));
-							$(target).find('.weui-uploader__files').append($file);
-							$file.css({
-								backgroundImage: 'url('+ url+ ')'
-							});*/
 						})
 						
 					} else {
