--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -643,7 +643,7 @@
         });
     }
 	
-	var merch_type_nm = {'1': '企业', '2': '个人', '9': '其他'};
+	var mchnt_type_nm = {'1': '企业', '2': '个人', '9': '其他'};
     $(function() {
         $('#add-btn').on('click', onClickAdd);
         $('#submit-btn').on('click', onSubmit);
