--- a/m/busi/mchnt-base-info.html
+++ b/m/busi/mchnt-base-info.html
@@ -46,7 +46,7 @@
                         <input class="weui-input" type="text" name="mchnt_id" placeholder="请输入客户号">
                     </div>
                 </div>
-                <div class="weui-cell">
+                <div class="weui-cell weui-cell_select weui-cell_select-after">
                     <div class="weui-cell__hd">
                         <label class="weui-label">商户类型</label>
                     </div>
