--- a/m/busi/term-param.html
+++ b/m/busi/term-param.html
@@ -344,8 +344,7 @@
             success: function(data) {
                 if (data.errcode == 0) {
                     weui.toast('操作成功', function() {
-                        searchPage.search();
-                        weui.page.back();
+                        window.location.reload();
                     });
                 } else {
                     weui.alert(data.errmsg, {
