--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -20,7 +20,7 @@
                     <label for="" class="weui-label">账户类型<span class="required">*</span></label>
                 </div>
                 <div class="weui-cell__bd">
-                    <select class="weui-select" name="account_type" id="account_type" value="2">
+                    <select class="weui-select" name="account_type" id="account_type">
                         <option value="1">对私账户</option>
                         <option value="2">对公账户</option>
                     </select>
