--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -184,11 +184,11 @@
                 // return false; // 阻止文件上传
             },
             onSuccess: function(ret) {
-                uploaderData.push({
-                    status: '1',
-                    serverid: ret.serverid,
-                    elec_info_type: elec_info_type
-                });
+				uploaderData[this.id] = {
+					status: '1',
+					serverid: ret.serverid,
+					elec_info_type: elec_info_type
+				};
             },
             onError: function(err) {
                 console.log(this, err);
@@ -235,7 +235,9 @@
 		}
         $('#form').find('.weui-uploader__file').forEach(function(item) {
             var id = parseInt($(item).attr('data-id'));
-            elec_info.push(uploaderData[id-1]);
+            if(id != undefined && id != null) {
+				elec_info.push(uploaderData[id]);
+			}
         });
 
         param.elec_info = elec_info;
@@ -285,6 +287,10 @@
 		}
 	}
     $(function() {
+		document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
+			WeixinJSBridge.call('hideToolbar');
+			WeixinJSBridge.call('hideOptionMenu');
+		});
 		var type = [
 			{value: '1', text: '企业入网'},
 			{value: '2', text: '个人入网'},
