--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -184,8 +184,11 @@
 	};
         
 	function auto_recognize(target, param) {
+		var url =  $$.wrapUrl('/action/uploads/') + param.serverid;
+		var file = new FileReader();
+		file.readAsDataURL(url);  
 		var Default = {
-			image: $(target).style.background-image,
+			image: file.result,
 			serverid: $(target).serverid
 		};
 		$.extend(Default, ocr_map[param.elec_info_type].param);
