--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -166,7 +166,7 @@
     var uploaderData = [];
 		
 	var hash = window.location.hash;
-	/*
+	
 	var ocr_map = {
 		'sfzzm':{
 			url: '/gateway/ocr/idcard', 
@@ -183,7 +183,7 @@
 		},
 	};
     
-	function imageToDataUrl(url, callback) {
+	function imageToDataUrl(url, callback, param) {
 		var canvas = document.createElement("canvas");
 		var ctx = canvas.getContext("2d");
 
@@ -204,11 +204,9 @@
 		img.src = url;		
 	}
 		
-	function auto_recognize(target, param) {
-		var url =  $$.wrapUrl('/action/uploads/') + param.serverid;
-		imageToDataUrl(url);
+	function auto_recognize(data, param) {
 		var Default = {
-			image: file.result,
+			image: data,
 			serverid: param.serverid
 		};
 		$.extend(Default, ocr_map[param.elec_info_type].param);
@@ -226,7 +224,7 @@
 				
 			}
 		});
-	}*/
+	}
     function initUploader(selector, elec_info_type) {
 
         weui.ajaxUploader(selector, {
@@ -249,7 +247,8 @@
 					serverid: ret.serverid,
 					elec_info_type: elec_info_type
 				};
-				//auto_recognize(this, uploaderData[this.id]);
+				var url =  $$.wrapUrl('/action/uploads/') + ret.serverid;
+				imageToDataUrl(url, auto_recognize, uploaderData[this.id]);
             },
             onError: function(err) {
                 console.log(this, err);
