--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -199,7 +199,7 @@
 
 			var dataURL =  canvas.toDataURL('image/jpeg');
 			console.log(dataURL);
-			callback(dataURL);
+			callback(dataURL, param);
 		}
 		img.src = url;		
 	}
