--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
-                        <div class="weui-uploader required" data-type="sfzzm">
+                        <div class="weui-uploader required _auto" data-type="sfzzm">
                             <div class="weui-uploader__hd">
                                 <p class="weui-uploader__title">身份证正面照片<span class="required">*</span></p>
                             </div>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__bd">
-                        <div class="weui-uploader" data-type="sfzfm">
+                        <div class="weui-uploader _auto" data-type="sfzfm">
                             <div class="weui-uploader__hd">
                                 <p class="weui-uploader__title">身份证反面照片</p>
                             </div>
@@ -187,16 +187,21 @@
 		'sfzfm':{
 			url:'/gateway/ocr/idcard', 
 			param: {id_card_side: 'back'}, 
-			ret:[{tag: 'valid_date', target: '#cert-date-picker'}]
+			ret:[{tag: 'valid_date', target: '#cert-date-picker', callback: valid_regular}]
 		},
 	};
     
+	function valid_regular(data) {
+		data = data.substr(data.indexOf('-')+1).replace(/(\.)/g,'');
+		return data;
+	}
+		
 	function imageToDataUrl(url, callback, param) {
 		var canvas = document.createElement("canvas");
 		var ctx = canvas.getContext("2d");
 
 		var img = new Image();
-		img.onload = function () {        
+		img.onload = function () {
 			var w = img.width;
 			var h = img.height;
 			var dataURL;
@@ -217,12 +222,19 @@
 			image: data,
 			serverid: param.serverid
 		};
-		$.extend(Default, ocr_map[param.elec_info_type].param);
+		$.extend(Default, ocr_map[param.elec_info_type].param || {});
+		
+		$.each(ocr_map[param.elec_info_type].ret, function(index, item) {
+			$(item.target).attr('readonly', true);
+		});
 		$$.request(ocr_map[param.elec_info_type].url, Default, {
 			success: function(data) {
 				if (data.errcode == 0) {
 					$.each(ocr_map[param.elec_info_type].ret, function(index, item) {
 						if(data.data[item.tag] && data.data[item.tag]!=undefined) {
+							if(item.callback) {
+								callback(data.data[item.tag]);
+							}
 							$(item.target).val(data.data[item.tag]);
 						}
 					});
@@ -231,6 +243,9 @@
 				}
 				
 			}
+		});
+		$.each(ocr_map[param.elec_info_type].ret, function(index, item) {
+			$(item.target).removeAttr('readonly');
 		});
 	}
 		
@@ -256,8 +271,10 @@
 					serverid: ret.serverid,
 					elec_info_type: elec_info_type
 				};
-				var url =  $$.wrapUrl('/action/uploads/') + ret.serverid;
-				imageToDataUrl(url, auto_recognize, uploaderData[this.id]);
+				if($(this).closest('.weui-uploader').hasClass('_auto')) {
+					var url =  $$.wrapUrl('/action/uploads/') + ret.serverid;
+					imageToDataUrl(url, auto_recognize, uploaderData[this.id]);
+				}
             },
             onError: function(err) {
                 console.log(this, err);
