--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -28,7 +28,7 @@
             </div>
             <div class="weui-cell">
                 <div class="weui-cell__bd">
-                    <div class="weui-uploader required _auto" data-type="zhzm">
+                    <div class="weui-uploader required recognize" data-type="zhzm">
                         <div class="weui-uploader__hd">
                             <p class="weui-uploader__title">账户正面照片<span class="required">*</span></p>
                         </div>
@@ -202,7 +202,7 @@
 					elec_info_type: elec_info_type
 				};
 				var target = $(this);
-				if(target.closest('.weui-uploader').hasClass('_auto')) {
+				if(target.closest('.weui-uploader').hasClass('recognize')) {
 					var url =  $$.wrapUrl('/action/uploads/') + ret.serverid;
 					imageToDataUrl(url, auto_recognize, uploaderData[this.id]);
 				}
