--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -222,7 +222,6 @@
 			image: data,
 			serverid: param.serverid
 		};
-		alert(param.serverid);
 		$.extend(Default, ocr_map[param.elec_info_type].param || {});
 		
 		$.each(ocr_map[param.elec_info_type].ret, function(index, item) {
@@ -273,6 +272,7 @@
 					elec_info_type: elec_info_type
 				};
 				var target = $(this);
+				alert(target.closest('.weui-uploader').hasClass('recognize'));
 				if(target.closest('.weui-uploader').hasClass('recognize')) {
 					alert(target.prop('class'));
 					var url =  $$.wrapUrl('/action/uploads/') + ret.serverid;
