--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -180,7 +180,7 @@
 	}
 		
     function initUploader(selector, elec_info_type) {
-
+		var target = $(selector);
         weui.ajaxUploader(selector, {
             url: $$.wrapUrl('/action/upload'),
             auto: true,
@@ -201,8 +201,7 @@
 					serverid: ret.serverid,
 					elec_info_type: elec_info_type
 				};
-				var target = $(this);
-				if(target.closest('.weui-uploader').hasClass('recognize')) {
+				if(target.hasClass('recognize')) {
 					var url =  $$.wrapUrl('/action/uploads/') + ret.serverid;
 					imageToDataUrl(url, auto_recognize, uploaderData[this.id]);
 				}
