--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -233,7 +233,7 @@
 					$.each(ocr_map[param.elec_info_type].ret, function(index, item) {
 						if(data.data[item.tag] && data.data[item.tag]!=undefined) {
 							if(item.callback) {
-								callback(data.data[item.tag]);
+								item.callback(data.data[item.tag]);
 							}
 							$(item.target).val(data.data[item.tag]);
 						}
