--- a/m/busi/steps/account.html
+++ b/m/busi/steps/account.html
@@ -123,7 +123,7 @@
 		'zhzm':{
 			url:'/gateway/ocr/bankcard', 
 			param: {}, 
-			ret:[{tag: 'valid_date', target: '#account_no'}]
+			ret:[{tag: 'bank_card_number', target: '#account_no'}]
 		},
 	};
     
