--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -192,7 +192,7 @@
 	};
     
 	function valid_regular(data) {
-		data = data.match(/[^\-]+$/).replace(/(\.)/g,'');
+		data = data.match(/[^\-]+$/)[0].replace(/(\.)/g,'');
 	}
 		
 	function imageToDataUrl(url, callback, param) {
