--- a/m/busi/steps/base.html
+++ b/m/busi/steps/base.html
@@ -110,9 +110,9 @@
             success: function(data) {
                 if (data.errcode == 0) {
                     weui.toast('操作成功', function() {
-                        window.location.href = 'select-busi.html?' + $.param(query, {
+                        window.location.href = 'select-busi.html?' + $.param($.extend(query, {
                             mchnt_id: data.data.mchnt_id
-                        });
+                        }));
                     });
                 } else {
                     weui.alert(data.errmsg, {
